@@ -56,11 +56,10 @@
                 <configuration>
                     <release>23</release>
                     <enablePreview>true</enablePreview>
-                    <!-- <compilerArgs> 
-                    <arg>- -add-modules</arg>
-                    <arg>jdk.incubator.vector</arg>
-                    <arg>-XX:+EnableDynamicAgentLoading 
-                    </compilerArgs>  -->
+                    <!--<compilerArgs>
+                        <arg>- -add-modules</arg>
+                        <arg>jdk.incubator.vector</arg>
+                    </compilerArgs>-->
                 </configuration>
             </plugin>
         </plugins>
